--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+body,
+html {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+    max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,
+*:after,
+*:before {
+    box-sizing: border-box;
+    outline: none;
+    -webkit-font-smoothing: antialiased;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+* {
+    position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+    display: inline-block;
+    text-decoration: none;
+    color: #1B2853;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
+
+
+.appWrapper {
+    display: grid;
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 10px;
+    grid-template-areas:
+            "header header"
+    "menu content";
+}
+
+
+
+
+
