--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,13 @@ textarea {
     height: 40px;
 }
 
+.usersLoader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
 
 
 
