--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -4,9 +4,16 @@
     padding-left: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding-right: 100px;
 }
 
 .headerLogo {
     width: 50px;
     height: 50px;
+}
+.loginBlock{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 18px;
 }
